LATEST
-------------------------------
- added NameUtility.shortcutName()

ehibasics 1.3.0 (2020-03-30)
-------------------------------
- added EhiLogger.logInternalEventFromListener() to report LogListener internal errors

ehibasics 1.2.0 (2018-06-19)
-------------------------------
- added OutParam

ehibasics 1.1.0 (2016-04-07)
-------------------------------
- make use of generics in Settings
