@@ -1,5 +1,6 @@
 LATEST
 -------------------------------
+- enable whitespace as value in Settings
 - added NameUtility.shortcutName()
 
 ehibasics 1.3.0 (2020-03-30)
